--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "eslint": "^8.28.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
+    "husky": "^8.0.2",
     "lint-staged": "^13.0.4",
     "prettier": "^2.8.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^0.29.8"
   },
   "husky": {
