--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "build:dev": "vite build --mode development",
+    "build:pro": "vite build --mode production",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "prettier": "prettier --write .",
-    "lint": "eslint --ext .ts,vue --ignore-path .gitignore ."
+    "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx --ignore-path .gitignore .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.2.25"
@@ -23,8 +26,10 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.0.4",
     "prettier": "^2.8.0",
+    "sass": "^1.56.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^0.29.8"
   },
