--- a/package.json
+++ b/package.json
@@ -12,21 +12,30 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "axios": "^1.2.1",
+    "pinia": "^2.0.27",
+    "vue": "^3.2.25",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.15",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.2.6",
+    "@vue/vue3-jest": "^29.2.2",
     "eslint": "^8.28.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
     "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "lint-staged": "^13.0.4",
     "prettier": "^2.8.0",
     "sass": "^1.56.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vite-plugin-compression": "^0.5.1",
