--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "prettier": "prettier --write .",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx --ignore-path .gitignore .",
+    "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "@vue/test-utils": "^2.2.6",
     "@vue/vue3-jest": "^29.2.2",
     "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
     "husky": "^8.0.2",
