--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   "es2021": true,
   "node": true // 解决eslint找不到module的报错
  },
+ "parser": "vue-eslint-parser",
  "extends": [
   "eslint:recommended",
   "plugin:vue/vue3-recommended",
