--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "element-plus": "^2.2.26",
     "pinia": "^2.0.27",
     "vue": "^3.2.25",
+    "vue-eslint-parser": "^9.1.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -39,6 +41,8 @@
     "sass": "^1.56.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.4.4",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^2.7.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
