--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,14 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "outDir": "./",
     "lib": ["esnext", "dom", "DOM.Iterable", "ScriptHost"],
-    "types": ["vite/client", "@types/jest"],
+    "types": ["vite/client", "jest"],
     "plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
     "paths": { "@/*": ["src/*"] }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["node_modules"]
+  // 排除不需要ts编译的文件
+  "exclude": ["node_modules", "dist", "axios"]
 }
