--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "outDir": "./",
+    // 忽略 this 的类型检查, Raise error on this expressions with an implied any type.
+    "noImplicitThis": false,
     "lib": ["esnext", "dom", "DOM.Iterable", "ScriptHost"],
     "types": ["vite/client", "jest"],
     "plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
