--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.2.6",
     "@vue/vue3-jest": "^29.2.2",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -37,8 +38,10 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.4",
+    "postcss": "^8.4.20",
     "prettier": "^2.8.0",
     "sass": "^1.56.1",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.3",
     "typescript": "^4.4.4",
     "unplugin-auto-import": "^0.12.1",
