--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.2.1",
     "element-plus": "^2.2.26",
     "pinia": "^2.0.27",
@@ -40,6 +41,7 @@
     "lint-staged": "^13.0.4",
     "postcss": "^8.4.20",
     "prettier": "^2.8.0",
+    "rollup-plugin-visualizer": "^5.8.3",
     "sass": "^1.56.1",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.3",
